--- a/src/index.css
+++ b/src/index.css
@@ -19,18 +19,19 @@ ul {
 }
 
 .square {
-  background: #fff;
-  border: 2px solid #999;
+  background: #d6ffc4;
+  border: 4px solid #999;
   float: left;
   font-size: 54px;
   font-weight: bold;
   line-height: 54px;
   height: 74px;
-  margin-right: -1px;
-  margin-top: -1px;
+  margin-right: -2px;
+  margin-top: -2px;
   padding: 0;
   text-align: center;
   width: 74px;
+  border-radius: 5px;
 }
 
 .square:focus {
@@ -44,6 +45,11 @@ ul {
 .game {
   display: flex;
   flex-direction: row;
+  background: #e3e8e1;
+  margin: 40px;
+  padding: 20px;
+  padding-bottom: 200px;
+  border-radius: 20px;
 }
 
 .game-title {
